# Betriebssysteme

BS_Praktikum_1/: CMakeLists.txt  Resource_View  main.cpp
BS_Praktikum_2/: CMakeLists.txt  Shell_Application  main.cpp
